--- a/CPlusPlusLearning/CPlusPlusLearning.vcxproj
+++ b/CPlusPlusLearning/CPlusPlusLearning.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="209. Транспонирование матрицы.cpp" />
     <ClCompile Include="210. Переворачивание матрицы.cpp" />
     <ClCompile Include="211. Перегрузка.cpp" />
+    <ClCompile Include="212. Шаблоны.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -180,6 +181,7 @@
     <Text Include="in_1d.txt" />
     <Text Include="in_2d.txt" />
     <Text Include="out.txt" />
+    <Text Include="test_212.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
